--- a/smartbot/src/app/components/message-list/message-list.component.html
+++ b/smartbot/src/app/components/message-list/message-list.component.html
@@ -1,5 +1,5 @@
-<div class="chatlist">
+<div class="chatlist" #chatlist>
   <ul class="list-group">
-    <message-item *ngFor = "let msg of messages" [meassage] = "msg"></message-item>
+    <message-item *ngFor="let msg of messages" [message]="msg"></message-item>
   </ul>
 </div>
