--- a/angular-app/src/app/components/message-form/message-form.component.html
+++ b/angular-app/src/app/components/message-form/message-form.component.html
@@ -1,4 +1,4 @@
 <div class="chatcontrol">
-  <input type="text" class="form-control chatinput" [(ngModel)]="message.content"/>
+  <input (keydown.enter)="sendMessage()" type="text" class="form-control chatinput" [(ngModel)]="message.content"/>
   <button class="btn btn-success sendbtn" (click)="sendMessage()">Send</button>
 </div>
