Some frontend changes

--- a/angular-app/src/app/app.component.scss
+++ b/angular-app/src/app/app.component.scss
@@ -1,5 +1,10 @@
 .chatform{
   width: 600px;
   margin: 0 auto;
-  margin-top: 50px;
+  //Removed
+  //margin-top: 50px;
+
+  //Added
+  max-height: 100%;
+  max-width: 100%;
 }
